# sii_rust_api

./: .gitignore  Cargo.toml  dte.xml
src/: main.rs
src/dte/: dte.rs  mod.rs
src/requests/: get_token_rq.rs  mod.rs
